--- a/ABOUT.HTM
+++ b/ABOUT.HTM
@@ -15,7 +15,7 @@
 	</STYLE>
 </HEAD>
 <p>
-<a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=117793&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo" /></a>
+<!-- <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=117793&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo" /></a> -->
 </p>
 <BODY LANG="en-US" DIR="LTR">
 <P STYLE="margin-top: 0.42cm; page-break-after: avoid"><FONT ><FONT SIZE=4><B>What
@@ -308,7 +308,7 @@ $outbuf->println(true);
 ><TD
 >java.lang.String</TD
 ><TD
->An UTF-8 encoded string. Since PHP does not support unicode, all java.lang.String values are auto-converted into a byte[] (see above) using UTF-8 encoding. If you work with the raw XML protocol, this conversion can be <a href="http://cvs.sourceforge.net/viewcvs.py/php-java-bridge/php-java-bridge/PROTOCOL.TXT?rev=1.7&view=markup">switched off</a>.</TD
+>An UTF-8 encoded string. Since PHP does not support unicode, all java.lang.String values are auto-converted into a byte[] (see above) using UTF-8 encoding. The encoding can be changed with the <strong><code>java_set_file_encoding()</code></strong> primitive.</TD
 ><TD
 >$string=$buf->toString();</TD
 ><TR
@@ -481,9 +481,9 @@ the instructions below (on Security Enhanced Linux please use the RPM or please 
 	<LI><P><FONT ><A name="mode4">In a production environment which requires <strong>load balancing and failover</strong> it is recommended to disable the <code>java.socketname</code> and start all backends with the command: <code>java -jar JavaBridge.jar INET:&lt;socket number&gt; &lt;log level&gt; &lt;log file&gt;</code>. The <code>.ini</code> file should contain:
 <BR><BR><code>extension = java.so<BR>[java]</code><br><br>
 The commands to start the backends might be (examples):<br><br>
-<code>JavaBridge.exe INET:9168 3 java-bridge-backend_1.log&<code><br>
-<code>java -jar JavaBridge.jar INET:9169 3 java-bridge-backend_2.log&<code><br>
-<code>java -jar JavaBridge.jar INET:9170 3 java-bridge-backend_3.log&<code><br>
+<code>JavaBridge.exe INET:9168 3 java-bridge-backend_1.log&</code><br>
+<code>java -jar JavaBridge.jar INET:9169 3 java-bridge-backend_2.log&</code><br>
+<code>java -jar JavaBridge.jar INET:9170 3 java-bridge-backend_3.log&</code><br>
 </A> </FONT>
 
 	</P>
