--- a/ABOUT.HTM
+++ b/ABOUT.HTM
@@ -153,7 +153,7 @@ The <strong><code>java_get_session</code></strong> primitive is meant for values
 <code>
 public class Cache {// Compile this class, create cache.jar and copy it to /usr/share/java<br>
 &nbsp;&nbsp; static Cache instance=null;<br>
-&nbsp;&nbsp; public static Cache getInstance() {<br>
+&nbsp;&nbsp; public static synchronized Cache getInstance() {<br>
 &nbsp;&nbsp;&nbsp; if(instance==null) instance=makeInstance(); <br>
 &nbsp;&nbsp;&nbsp; return instance;<br>
 }<br><br>
