--- a/ABOUT.HTM
+++ b/ABOUT.HTM
@@ -31,13 +31,13 @@ is the PHP/Java bridge?</B></FONT></FONT></P>
 </FONT></P>                                                                                            
 <P><FONT > Clustering and load balancing is available if the backend runs in a servlet environment supporting these features, tomcat 5 for example.
 </FONT></P>                                                                                            
-<P STYLE="margin-top: 0.42cm; page-break-after: avoid"><FONT ><FONT SIZE=4><B>What is the advantage over SOAP or XML-RPC?</B></FONT></FONT></P>
+<P STYLE="margin-top: 0.42cm; page-break-after: avoid"><FONT ><FONT SIZE=4><B>How does it compare to SOAP or XML-RPC?</B></FONT></FONT></P>
 <ul>
 <li> The PHP/Java Bridge typically runs on the same computer as the PHP interpreter, so a very efficient protocol can be used. An example is provided which dynamically loads a java library and creates a 200x200 excel sheet using more than 40000 PHP/Java library calls.  The php example runs only 3-5 times slower than pure (jit-compiled) java code.
-<li> No need to write and deploy a public interface on the server side. The bridge uses reflection to determine what can or cannot be accessed in the local backend.
+<li> No need to write and deploy a public interface. The bridge uses reflection to determine what can be accessed in the local backend.
 <li> It is possible to load/unload java libraries at runtime.
 <li> On linux the c/s communication channel is not visible and the backend runs in its own "Security Enhanced Linux" domain.
-<li> Other modules such as XML-RPC do most of their work in the PHP module (C code), which makes them fulnerable to buffer overflows.  The PHP/Java Bridge module doesn't use any state on the web-server side, it simply forwards the java(...) statements to the local (java or .NET) backend. The local backend (which runs in a different domain than the web-server) can communicate with the enterprise application server using RMI/IIOP or other java technologies. An example can be found in the examples/j2ee folder.
+<li> Other modules such as XML-RPC do most of their work in the PHP module (in C code), which makes them vulnerable to buffer overflows.  The PHP/Java Bridge module doesn't use any state on the web-server side, it simply forwards the java(...) statements to the local backend. The local backend runs in a different process environment (and on SEL even in a different security domain), it can communicate with the enterprise application server using RMI/IIOP or other java technologies.
 </ul>
 <P><FONT > 
   The bridge adds the following primitives to PHP.  The type mappings are shown in <a href="#type-mapping">table 1</a>.
