--- a/ABOUT.HTM
+++ b/ABOUT.HTM
@@ -352,11 +352,11 @@ $outbuf=new java("java.io.PrintStream", $buf);<br>
 ></TR
 ><TR
 ><TD
+>exact number</TD
+><TD
 >long</TD
 ><TD
->int</TD
-><TD
->32 bit integer</TD
+>64 bit integer</TD
 ><TD
 >$outbuf->println(100);<br>
 </TD
@@ -376,7 +376,7 @@ $outbuf->println(true);
 ></TR
 ><TR
 ><TD
->double</TD
+>inexact number</TD
 ><TD
 >double</TD
 ><TD
